--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-LABWEB1
+# Lab1web
+## Nama : Pamuji raharjo
+## NIM  : 312310720
+## kelas :TI 23 A.4
+## 1. Menambahkan file baru praktikum1 dan menambahkan tag dasar dokumen HTML.
