--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 # Lab1web
-## Nama : Pamuji raharjo
-## NIM  : 312310720
+## Nama : Khairinisya Ani A.
+## NIM  : 312310365
 ## kelas :TI 23 A.4
 ## 1. Menambahkan file baru praktikum1 dan menambahkan tag dasar dokumen HTML.
