--- a/README
+++ b/README
@@ -1,1 +1,32 @@
- # Lab1web
+# Lab1web
+## Nama : Pamuji raharjo
+## NIM  : 312310720
+## kelas :TI 23 A.4
+## 1. Menambahkan file baru praktikum1 dan menambahkan tag dasar dokumen HTML.
+- Gambar1
+![Img 1](Screenshot/1.png)
+- Gambar2
+![Img 2](Screenshot/2.png)
+## 2. Kemudian membuat beberapa paragraf sederhana
+- Gambar result
+![Img 3](Screenshot/3.png)
+## 3. Kemudian atur atribut paragraf dan menambahkan sub judul
+- Gambar 1
+![Img 4](Screenshot/5.png)
+- Gambar result 1
+![Img 5](Screenshot/4.png)
+## 4. Format teks pada paragraf tersebut
+- Gambar result
+![Img 6](Screenshot/6.png)
+## 5. Kemudian menyisipkan gambar kepada halaman web dan menambahkan judul
+- Gambar 1
+![Img 7](Screenshot/7.png)
+- Gambar 2
+![Img 8](Screenshot/9.png)
+- Gambar Result 1&2
+![Img 9](Screenshot/10.png)
+## 6 Menambahkan Hyperlink pada dokumen tersebut
+- Gambar 1
+![Img 10](Screenshot/11.png)
+- Final Result
+![Img 11](Screenshot/12.png)
